# INF3995-Templates

./: .gitignore  README.md
Any-Docker-VNC/: Dockerfile  README.md
Installation/: README.md
Installation/Any-Docker-VNC/: Dockerfile  README.md
Installation/Linux-Docker-X11/: Dockerfile  README.md
Installation/Ubuntu22.04/: README.md  install.sh
Linux-Docker-X11/: README.md
Presentations/: INF3995_Docker.odp  INF3995_ROS.odp
Ubuntu22.04/: README.md
project_ws/src/: README.md
project_ws/src/ros_gz_example_bringup/: package.xml
project_ws/src/ros_gz_example_bringup/config/: cartographer_2d.lua  limo_diff_drive.rviz  ros_gz_example_bridge.yaml
project_ws/src/ros_gz_example_bringup/launch/: diff_drive.launch.py
project_ws/src/ros_gz_example_description/models/limo_ackerman/: model.config  model.sdf
project_ws/src/ros_gz_example_description/models/limo_diff_drive/: model.sdf
project_ws/src/ros_gz_example_gazebo/: CMakeLists.txt
project_ws/src/ros_gz_example_gazebo/worlds/: diff_drive.sdf
